--- a/Downloads/testng-browserstack-master/pom.xml
+++ b/Downloads/testng-browserstack-master/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.browserstack</groupId>
-    <artifactId>testng-browserstack</artifactId>
+    <artifactId>Testathon-codebreakers</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
